lib/parser/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(children) { return new RootNodeExpression(children); },
        peg$c1 = peg$FAILED,
        peg$c2 = "<!DOCTYPE",
        peg$c3 = { type: "literal", value: "<!DOCTYPE", description: "\"<!DOCTYPE\"" },
        peg$c4 = [],
        peg$c5 = /^[^>]/,
        peg$c6 = { type: "class", value: "[^>]", description: "[^>]" },
        peg$c7 = ">",
        peg$c8 = { type: "literal", value: ">", description: "\">\"" },
        peg$c9 = function(info) {
              return new DocTypeExpression(info.join(""));
            },
        peg$c10 = function(children) { 
            var children = trimTextExpressions(children);

            if (children.length > 1 && hasBlock(children) && onlyTextAndBlocks(children)) {
              return new ArrayExpression(new ParametersExpression([new CombinedBlockExpression(children)]));
            } else {
              return new ArrayExpression(new ParametersExpression(children));
            }
          },
        peg$c11 = "<!--",
        peg$c12 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c13 = void 0,
        peg$c14 = "-->",
        peg$c15 = { type: "literal", value: "-->", description: "\"-->\"" },
        peg$c16 = function(v) { return v; },
        peg$c17 = function(value) {
            return new CommentNodeExpression(trimEnds(value.join("")));
          },
        peg$c18 = function(startTag, children, endTag) {

            if (startTag.name != endTag.name) {
              expected("</" + startTag.name + ">");
            }

            return new ElementNodeExpression(startTag.name, startTag.attributes, children);
          },
        peg$c19 = function(value) {
              return new TextNodeExpression(trimNewLineChars(value.join("")));
            },
        peg$c20 = "<",
        peg$c21 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c22 = "{{",
        peg$c23 = { type: "literal", value: "{{", description: "\"{{\"" },
        peg$c24 = function() {
              return text();
            },
        peg$c25 = function(info) { return info; },
        peg$c26 = "/>",
        peg$c27 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c28 = function(info) { return new ElementNodeExpression(info.name, info.attributes); },
        peg$c29 = function(name, attributes) {

              var attrs = {};

              for (var i = 0, n = attributes.length; i < n; i++) {
                var attr = attributes[i];
                attrs[attr.name] = attr.value;
              }

              return {
                name: name,
                attributes: new HashExpression(attrs)
              };
            },
        peg$c30 = "</",
        peg$c31 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c32 = function(name) {
              return {
                name: name
              };
            },
        peg$c33 = /^[a-zA-Z0-9:_.\-]/,
        peg$c34 = { type: "class", value: "[a-zA-Z0-9:_.\\-]", description: "[a-zA-Z0-9:_.\\-]" },
        peg$c35 = function(word) { return word.join(""); },
        peg$c36 = "=",
        peg$c37 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c38 = function(name, values) {
              return {
                name: name,
                value: values
              };
            },
        peg$c39 = function(name) {
              return {
                name: name,
                value: new LiteralExpression(true)
              };
            },
        peg$c40 = "\"",
        peg$c41 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c42 = /^[^"]/,
        peg$c43 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c44 = function() { return new StringExpression(trimNewLineChars(text())); },
        peg$c45 = function(values) { return attrValues(values); },
        peg$c46 = "'",
        peg$c47 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c48 = /^[^']/,
        peg$c49 = { type: "class", value: "[^']", description: "[^']" },
        peg$c50 = function(binding) { return attrValues([binding]); },
        peg$c51 = "{{#",
        peg$c52 = { type: "literal", value: "{{#", description: "\"{{#\"" },
        peg$c53 = function(blockBinding) { return blockBinding; },
        peg$c54 = function(scripts, fragment, child) {
              return new BlockBindingExpression(scripts, fragment, child);
            },
        peg$c55 = "{{/",
        peg$c56 = { type: "literal", value: "{{/", description: "\"{{/\"" },
        peg$c57 = function(blockBinding) { return new RootNodeExpression(blockBinding); },
        peg$c58 = "{{/}}",
        peg$c59 = { type: "literal", value: "{{/}}", description: "\"{{/}}\"" },
        peg$c60 = function() { return void 0; },
        peg$c61 = "}}",
        peg$c62 = { type: "literal", value: "}}", description: "\"}}\"" },
        peg$c63 = function(scripts) {
              return new BlockBindingExpression(scripts);
            },
        peg$c64 = function(scripts) {
              return scripts;
            },
        peg$c65 = function(scriptName) {
              var hash = {};
              hash[scriptName] = new ScriptExpression(new LiteralExpression(true));
              return new HashExpression(hash);
            },
        peg$c66 = function(scripts) {
              for (var k in scripts) {
                scripts[k] = new ScriptExpression(scripts[k]);
              }
              return new HashExpression(scripts);
            },
        peg$c67 = ",",
        peg$c68 = { type: "literal", value: ",", description: "\",\"" },
        peg$c69 = function(value, ascripts) {

              var scripts = {
                value: new ScriptExpression(value)
              };

              ascripts = ascripts.length ? ascripts[0][1] : [];
              for (var i = 0, n = ascripts.length; i < n; i++) {
                scripts[ascripts[i].key] = new ScriptExpression(ascripts[i].value);
              }

              return new HashExpression(scripts);
            },
        peg$c70 = "?",
        peg$c71 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c72 = ":",
        peg$c73 = { type: "literal", value: ":", description: "\":\"" },
        peg$c74 = function(condition, left, right) {
              return new TernaryConditionExpression(condition, left, right);
            },
        peg$c75 = "(",
        peg$c76 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c77 = ")",
        peg$c78 = { type: "literal", value: ")", description: "\")\"" },
        peg$c79 = function(params) {
              return params;
            },
        peg$c80 = "()",
        peg$c81 = { type: "literal", value: "()", description: "\"()\"" },
        peg$c82 = function() { return []; },
        peg$c83 = function(param1, rest) {
              return [param1].concat(rest.map(function(v) {
                return v[1];
              }));
            },
        peg$c84 = function(left, right) {
              return new AssignmentExpression(left, right);
            },
        peg$c85 = "&&",
        peg$c86 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c87 = "||",
        peg$c88 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c89 = "===",
        peg$c90 = { type: "literal", value: "===", description: "\"===\"" },
        peg$c91 = "==",
        peg$c92 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c93 = "!==",
        peg$c94 = { type: "literal", value: "!==", description: "\"!==\"" },
        peg$c95 = "!=",
        peg$c96 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c97 = ">==",
        peg$c98 = { type: "literal", value: ">==", description: "\">==\"" },
        peg$c99 = ">=",
        peg$c100 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c101 = "<==",
        peg$c102 = { type: "literal", value: "<==", description: "\"<==\"" },
        peg$c103 = "<=",
        peg$c104 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c105 = "+",
        peg$c106 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c107 = "-",
        peg$c108 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c109 = "%",
        peg$c110 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c111 = "*",
        peg$c112 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c113 = "/",
        peg$c114 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c115 = function(left, operator, right) {
              return new OperatorExpression(operator, left, right);
            },
        peg$c116 = function(value) { return value; },
        peg$c117 = function(expression, modifiers) {

              for (var i = 0, n = modifiers.length; i < n; i++) {
                expression = new ModifierExpression(modifiers[i].name, new ParametersExpression([expression].concat(modifiers[i].parameters)));
              }

              return expression;
            },
        peg$c118 = "|",
        peg$c119 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c120 = null,
        peg$c121 = function(name, parameters) {
            return {
              name: name,
              parameters: parameters || []
            };
          },
        peg$c122 = function(context) { return context; },
        peg$c123 = "!",
        peg$c124 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c125 = function(not, value) {
              return new NotExpression(not, value);
            },
        peg$c126 = /^[0-9]/,
        peg$c127 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c128 = function(value) {
              return new LiteralExpression(parseFloat(text()));
            },
        peg$c129 = ".",
        peg$c130 = { type: "literal", value: ".", description: "\".\"" },
        peg$c131 = function(group) { return new GroupExpression(group); },
        peg$c132 = function(expression) {
              return new LiteralExpression(expression.value);
            },
        peg$c133 = "true",
        peg$c134 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c135 = "false",
        peg$c136 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c137 = function(value) {
              return {
                type: "boolean",
                value: value === "true"
              };
            },
        peg$c138 = "undefined",
        peg$c139 = { type: "literal", value: "undefined", description: "\"undefined\"" },
        peg$c140 = function() { return { type: "undefined", value: void 0 }; },
        peg$c141 = "NaN",
        peg$c142 = { type: "literal", value: "NaN", description: "\"NaN\"" },
        peg$c143 = function() { return { type: "nan", value: NaN }; },
        peg$c144 = "Infinity",
        peg$c145 = { type: "literal", value: "Infinity", description: "\"Infinity\"" },
        peg$c146 = function() { return { type: "infinity", value: Infinity }; },
        peg$c147 = "null",
        peg$c148 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c149 = "NULL",
        peg$c150 = { type: "literal", value: "NULL", description: "\"NULL\"" },
        peg$c151 = function() { return { type: "null", value: null }; },
        peg$c152 = function(reference, parameters) {
              return new CallExpression(reference, new ParametersExpression(parameters));
            },
        peg$c153 = "^",
        peg$c154 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c155 = "~>",
        peg$c156 = { type: "literal", value: "~>", description: "\"~>\"" },
        peg$c157 = "<~>",
        peg$c158 = { type: "literal", value: "<~>", description: "\"<~>\"" },
        peg$c159 = "~",
        peg$c160 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c161 = "<~",
        peg$c162 = { type: "literal", value: "<~", description: "\"<~\"" },
        peg$c163 = function(bindingType, reference, path) {
              path = [reference].concat(path.map(function(p) { return p[1]; }));
              return new ReferenceExpression(path, bindingType);
            },
        peg$c164 = /^[a-zA-Z_$0-9]/,
        peg$c165 = { type: "class", value: "[a-zA-Z_$0-9]", description: "[a-zA-Z_$0-9]" },
        peg$c166 = function(name) { return text(); },
        peg$c167 = "{",
        peg$c168 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c169 = "}",
        peg$c170 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c171 = function(values) {
              return new HashExpression(values);
            },
        peg$c172 = function(values) {
              var s = {};
              for (var i = 0, n = values.length; i < n; i++) {
                s[values[i].key] = values[i].value;
              }
              return s;
            },
        peg$c173 = function(firstValue, additionalValues) {
              return [
                firstValue
              ].concat(additionalValues.length ? additionalValues[0][1] : []);
            },
        peg$c174 = function(key, value) {
              return {
                key: key,
                value: value || new LiteralExpression(void 0)
              };
            },
        peg$c175 = function(key) { return key.value; },
        peg$c176 = function(key) { return key; },
        peg$c177 = { type: "other", description: "string" },
        peg$c178 = function(chars) {
              return new StringExpression(chars.join(""));
            },
        peg$c179 = "\\",
        peg$c180 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c181 = function() { return text(); },
        peg$c182 = "\\\"",
        peg$c183 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c184 = "\\'",
        peg$c185 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c186 = { type: "any", description: "any character" },
        peg$c187 = /^[a-zA-Z]/,
        peg$c188 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c189 = function(chars) { return chars.join(""); },
        peg$c190 = /^[ \n\r\t]/,
        peg$c191 = { type: "class", value: "[ \\n\\r\\t]", description: "[ \\n\\r\\t]" },
        peg$c192 = /^[\n\r\t]/,
        peg$c193 = { type: "class", value: "[\\n\\r\\t]", description: "[\\n\\r\\t]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseStart() {
      var s0;

      s0 = peg$parseTemplate();

      return s0;
    }

    function peg$parseTemplate() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseChildNodes();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseDocType() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 9) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 9;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              if (peg$c5.test(input.charAt(peg$currPos))) {
                s4 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
            }
          } else {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s5 = peg$c7;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c9(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseChildNodes() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseElementNode();
      if (s2 === peg$FAILED) {
        s2 = peg$parseTextNode();
        if (s2 === peg$FAILED) {
          s2 = peg$parseBlockBinding();
          if (s2 === peg$FAILED) {
            s2 = peg$parseCommentNode();
          }
        }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseElementNode();
        if (s2 === peg$FAILED) {
          s2 = peg$parseTextNode();
          if (s2 === peg$FAILED) {
            s2 = peg$parseBlockBinding();
            if (s2 === peg$FAILED) {
              s2 = peg$parseCommentNode();
            }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c10(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseCommentNode() {
      var s0, s1, s2, s3, s4, s5, s6;
